--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -13,8 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Usuario:"
-        tools:layout_editor_absoluteX="43dp"
-        tools:layout_editor_absoluteY="117dp" />
+        tools:layout_editor_absoluteX="49dp"
+        tools:layout_editor_absoluteY="116dp" />
 
     <EditText
         android:id="@+id/editText"
@@ -22,16 +22,16 @@
         android:layout_height="46dp"
         android:ems="10"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="43dp"
-        tools:layout_editor_absoluteY="152dp" />
+        tools:layout_editor_absoluteX="49dp"
+        tools:layout_editor_absoluteY="135dp" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Contraseña:"
-        tools:layout_editor_absoluteX="48dp"
-        tools:layout_editor_absoluteY="199dp" />
+        tools:layout_editor_absoluteX="43dp"
+        tools:layout_editor_absoluteY="181dp" />
 
     <EditText
         android:id="@+id/editText2"
@@ -39,32 +39,32 @@
         android:layout_height="44dp"
         android:ems="10"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="43dp"
-        tools:layout_editor_absoluteY="234dp" />
+        tools:layout_editor_absoluteX="49dp"
+        tools:layout_editor_absoluteY="203dp" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="139dp"
         android:layout_height="41dp"
         android:text="Iniciar"
-        tools:layout_editor_absoluteX="44dp"
-        tools:layout_editor_absoluteY="292dp" />
+        tools:layout_editor_absoluteX="43dp"
+        tools:layout_editor_absoluteY="261dp" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="131dp"
         android:layout_height="40dp"
         android:text="Salir"
-        tools:layout_editor_absoluteX="198dp"
-        tools:layout_editor_absoluteY="293dp" />
+        tools:layout_editor_absoluteX="196dp"
+        tools:layout_editor_absoluteY="262dp" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Olvidaste tu contraseña?"
-        tools:layout_editor_absoluteX="103dp"
-        tools:layout_editor_absoluteY="349dp" />
+        tools:layout_editor_absoluteX="100dp"
+        tools:layout_editor_absoluteY="313dp" />
 
     <TextView
         android:id="@+id/textView4"
@@ -74,5 +74,14 @@
         android:textSize="50sp"
         tools:layout_editor_absoluteX="69dp"
         tools:layout_editor_absoluteY="16dp" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:text=""
+        android:background="#A39C9B"
+        tools:layout_editor_absoluteX="2dp"
+        tools:layout_editor_absoluteY="93dp" />
 
 </android.support.constraint.ConstraintLayout>
